[package]
name = "axum-xml"
version = "0.3.0"
edition = "2021"
authors = ["Assaf Vayner <assaf@huggingface.co>"]
description = "XML extractor for axum"
repository = "https://github.com/assafvayner/axum-xml"
readme = "README.md"
license = "MIT"
keywords = ["axum", "xml", "parser", "parsing", "extractor"]
categories = [
    "parsing",
    "text-processing",
    "encoding",
    "web-programming",
    "web-programming::http-server",
]
exclude = [".github/*", ".mergify.yml", "rust-toolchain.toml", "bacon.toml"]

[features]
encoding = ["quick-xml/encoding"]

[dependencies]
axum-core = "0.5"
bytes = "1.7"
http = "1.0"
http-body = "1.0"
mime = "0.3"
quick-xml = { version = "0.36", features = ["serialize", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
axum = "0.8"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["rt", "macros"] }
tower = "0.5"
tower-service = "0.3"
uuid = { version = "1.9", features = ["serde"] }
